--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="textViewGPA">GPA của bạn?</string>
     <string name="textView_cham_ngon">Châm ngôn yêu thích của bạn?</string>
     <string name="textView_mon_an">Món ăn yêu thích của bạn là gì?</string>
+    <string name="textView_email">Email của bạn?</string>
+    <string name="textView_so_dien_thoai">Số điện thoại của bạn là?</string>
 </resources>
